3、添加小字一组音阶，升a与b还未添加

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
+        <activity android:name=".MainActivity"/>
         <activity android:name=".ear_interval.NoteEarTrainingActivity"/>
         <activity android:name=".ear_interval.IntervalEarTrainingActivity"/>
     </application>
