5、添加音阶限制、音域限制

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".MainActivity"/>
-        <activity android:name=".ear_interval.NoteEarTrainingActivity"/>
+        <activity android:name=".ear_interval.NoteEarTrainingActivity"
+            android:screenOrientation="fullSensor"/>
         <activity android:name=".ear_interval.IntervalEarTrainingActivity"/>
     </application>
 
