--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+//apply from: 'tinker-support.gradle'
 
 android {
     compileSdkVersion 28
@@ -8,8 +9,8 @@ android {
         applicationId "com.jackpeng.oboemusic"
         minSdkVersion 19
         targetSdkVersion 28
-        versionCode 1
-        versionName "1.0"
+        versionCode 3
+        versionName "1.2"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
@@ -18,12 +19,39 @@ android {
                 cppFlags ""
             }
         }
+
+        ndk {
+            //设置支持的SO库架构
+            abiFilters 'armeabi-v7a' // 'armeabi' , 'x86', 'armeabi-v7a', 'x86_64', 'arm64-v8a'
+        }
+    }
+
+    signingConfigs {
+        release {
+            keyAlias 'jackpeng'
+            keyPassword 'jackpeng123'
+            storeFile file('F:\\jackpengdir\\devdir\\jks\\musiclearn.jks')
+            storePassword 'jackpeng123'
+        }
+        debug {
+            keyAlias 'jackpeng'
+            keyPassword 'jackpeng123'
+            storeFile file('F:\\jackpengdir\\devdir\\jks\\musiclearn.jks')
+            storePassword 'jackpeng123'
+        }
     }
 
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release//在这里设置配置的签名
+        }
+
+        debug {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release//在这里设置配置的签名
         }
     }
 
@@ -54,4 +82,11 @@ dependencies {
     //黄油刀
     implementation 'com.jakewharton:butterknife:10.2.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.1'
+
+
+    //注释掉原有bugly的仓库
+    //compile 'com.tencent.bugly:crashreport:latest.release'//其中latest.release指代最新版本号，也可以指定明确的版本号，例如2.3.2
+    implementation 'com.tencent.bugly:crashreport_upgrade:latest.release'//其中latest.release指代最新版本号，也可以指定明确的版本号，例如1.2.0
+    implementation 'com.tencent.bugly:nativecrashreport:latest.release' //其中latest.release指代最新版本号，也可以指定明确的版本号，例如2.2.0
+    implementation 'com.tencent.tinker:tinker-android-lib:1.9.9'
 }
